--- a/posting.html
+++ b/posting.html
@@ -24,8 +24,8 @@
             <h1>company name</h1>
           </div>
           <div class="col-6" id="login">
-            <a href="login.html" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">
-                Login
+            <a href="login.html" id="auth">
+                              Login
             </a>
           </div>
           <div class="col-5 offset-2">
@@ -82,6 +82,11 @@
   </div> 
   
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
+<script>
+  if (localStorage.getItem("status")=="logged") {
+            document.getElementById("auth").innerHTML = "Logout";
+              
+          }
+</script>
 </body>
 </html>
