--- a/posting.html
+++ b/posting.html
@@ -18,7 +18,7 @@
         
         <div class="row"  id="header">
           <div class="col-2">
-            <img src="pic2.png" class="img-fluid"> <!--logo-->
+            <img src="pic2.png" class="img-fluid" onclick="imageClick()"> <!--logo-->
           </div>
           <div class="col-4">
             <h1>company name</h1>
@@ -82,11 +82,7 @@
   </div> 
   
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-<script>
-  if (localStorage.getItem("status")=="logged") {
-            document.getElementById("auth").innerHTML = "Logout";
-              
-          }
-</script>
+<script src="javascript.js"></script>
+
 </body>
 </html>
