basic posting js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div  style="background-color: white;">
+    <div  style="background-color: white;" >
         <!--header-->
         
         <div class="row"  id="header">
@@ -36,9 +36,10 @@
         </div>
 
 
-
         <!--main sec-->
-        <div class="row" >
+        <div id="div1"></div>
+        <!--
+        <div class="row"  >
             <div class="col-3" id="sideList">
                 <h3>Some Links</h3>
                 
@@ -70,7 +71,7 @@
                     <p>Some text..</p>
                   </div>
             </div>
-        </div>
+        </div> -->
 
         <!--footer-->
         <div class="row" style="background-color: #19323C;">
