--- a/posting.html
+++ b/posting.html
@@ -34,20 +34,20 @@
           
         </div>
         <!--main content-->
-        <div class="container">
+        <div class="container" >
             <div class="row" style="margin-top: 40px;">
                 <div class="col-2"></div>
                 <div class="col-8">
                     <form>
                         <div class="form-group">
                             <label class="form-control-label" style="font-size: 20px;">Title</label>
-                            <input type="text" class="form-control" style="background-color: white;" >
+                            <input type="text" class="form-control" style="background-color: white;" id="title" >
                         </div>
 
                         <div class="form-group">
                             <label class="form-control-label" style="font-size: 20px;">DETAILS</label>
                             <textarea rows="4" cols="50" class="form-control" style="border: none;
-                            border-bottom: 2px solid #0DB8DE;" >
+                            border-bottom: 2px solid #0DB8DE;" id="det" >
                                </textarea>
                         </div>
 
@@ -62,7 +62,7 @@
                         <div class="col-lg-12 loginbttm">
                            
                             <div class="col-lg-6 login-btm login-button">
-                                <button type="submit" class="btn btn-outline-primary">POST</button>
+                                <button type="submit" class="btn btn-outline-primary" onclick="posting()">POST</button>
                             </div>
                         </div>
                     </form>
@@ -83,6 +83,8 @@
   
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 <script src="javascript.js"></script>
+
+
 
 </body>
 </html>
