--- a/posting.html
+++ b/posting.html
@@ -52,12 +52,11 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="form-control-label" style="font-size: 20px;" >CATAGORY</label><br>
-                            <input type="radio" id="t1" name="cata" value="general">
-                            <label for="t1">general</label><br>
-                            <input type="radio" id="y2" name="cata" value="specific">
-                            <label for="t2">specific</label><br>
+                          <label class="form-control-label" style="font-size: 20px;">Date</label>
+                          <input type="date" class="form-control" style="background-color: white;" id="date" >
                         </div>
+
+                        
 
                         <div class="col-lg-12 loginbttm">
                            
