--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <div class="col-2">
             <img src="pic2.png" class="img-fluid" onclick="imageClick()"> <!--logo-->
           </div>
-          <div class="col-4">
-            <h1>company name</h1>
+          <div class="col-4" style="margin-left:-40px;">
+            <h1>Stellan </h1>
           </div>
 
           
