--- a/posting.html
+++ b/posting.html
@@ -27,7 +27,7 @@
             
           </div>
           <div class="col-5 offset-2">
-              <p>our customers are our priority</p>
+              <p>What are we going to share today?</p>
           </div>
           
         </div>
